--- a/src/views/gift.pug
+++ b/src/views/gift.pug
@@ -5,7 +5,127 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="/styles/global.css")
+        link(rel="stylesheet", href="/styles/gift.css")
         link(rel="shortcut icon", href="/images/icon.png", type="image/x-icon")
         title Feliz cumpleaños!!!
     body
         .content
+            p(class="text")
+                | Hola bebé, no sé cuando estés leyendo esto pero es o fue tu cumpleaños ❤️
+                br
+                | Quiero decirte que te has vuelto una de mis personas favoritas en este mundo, me encanta tu risita,
+                br
+                | humor, tu sonrisa y lo linda persona que eres.
+                br
+                | Podría seguir así todo el día, pero no se trata de eso, esta carta que te hago es un regalo que te quise
+                br
+                | hacer a ti, inició en noviembre del año pasado, sí que ha pasado tiempo. Espero y hoy sea un día 
+                br
+                | maravilloso y lindo, hoy es tu día, no puedo ni imaginar la cara que estás poniendo al leer esto y espero 
+                br
+                | estar a tu lado para cuando lo leas y si no, no pasa nada, estaré en llamada o por mensajes, pero estaré, 
+                br
+                | estaré aquí no solo para las cosas buenas, estaré para tus momentos de crisis, para tus días oscuros
+                br
+                | Sé que no soy la mejor pareja, tengo errores, muchos errores y estoy trabajando en ellos porque quiero
+                br 
+                | darte lo mejor de mi y con tiempo sé que lo lograré, porque la veo...
+        .cart
+            p(class="text blue") Veo a la mujer que te refieres.
+            p(class="text green") ¿Dafne?
+            p(class="text blue") Sí. Ten cuidado. Ha alcanzado subido un escalón. Puede leer nuestras ideas.
+            p(class="text green") Eso no importa. Cree que somos parte de una carta.
+            p(class="text blue") Me gusta esta mujer. No se ha rendido.
+            p(class="text green") Está leyendo nuestros pensamientos como si fueran palabras en una pantalla.
+            p(class="text blue") Es así como escoge imaginar muchas cosas, cuando está profundamente sumida en el sueño de un juego.
+            p(class="text green") Las palabras son una hermosa herramienta. Muy flexible.
+            p(class="text blue") Ella solía escuchar voces. Antes de pudiese leer. En aquellos días cuando los que no podían soñar llamaban brujos a los soñadores.
+            p(class="text green") ¿Con qué soñó ella?
+            p(class="text blue") Ella soñó con la luz del sol y con los árboles. Con fuego y agua. Soñó que creó. Y soñó que destruyó. Soñó que cazó, y que fue cazado. Soñó con un refugio.
+            p(class="text green") Ah, el sueño original. Tiene millones de años, y todavía funciona. ¿Pero qué cosa real creó ella, detrás de la pantalla?
+            p(class="text blue") Trabajó. Junto a nosotros, para esculpir un mundo real dentro del pliegue de
+                img(src="", alt="")
+                |, y creó un
+                img(src="", alt="")
+                |para
+                img(src="", alt="")
+                , en
+                img(src="", alt="")
+            p(class="text green") No puede leer ese pensamiento.
+            p(class="text blue") No, aún no alcanzó el nivel más alto. Aquel, que debe alcanzar en el largo sueño de la vida, no en el corto sueño de una carta.
+            p(class="text green") ¿Sabe que la amamos? ¿Que el universo es bueno?
+            p(class="text blue") A veces, a través del ruido de sus pensamientos, nos escucha, sí.
+            p(class="text green") Pero hay momentos en los que está triste, en el sueño largo. Crea mundos que no tienen verano, y tiembla debajo de un sol negro, y toma su triste creación como real.
+            p(class="text blue") Curarle de la pena nos destruirá. La pena es parte de su propia tarea privada. No podemos interferir.
+            p(class="text green") A veces cuando está sumergida en sus sueños, quisiera decirle, ella construye mundos tangibles en la realidad. A veces quiero contarle sobre su importancia en el universo. A veces, cuando no tienen una conexión real por un tiempo, quiero ayudarle a decir la palabra a la que teme.
+            p(class="text blue") Está leyendo nuestros pensamientos.
+            p(class="text green") A veces no me importa. A veces desearía decirle, que este mundo que toma por real es solamente
+                img(src="", alt="")
+                |y
+                img(src="", alt="")
+                |, me gustaría decirle que es
+                img(src="", alt="")
+                |en
+                img(src="", alt="")
+                | . Ve tan poco de lo real en su largo sueño.
+            p(class="text blue") Y todavía juega.
+            p(class="text green") Pero sería tan fácil decirles…
+            p(class="text blue") Demasiado fuerte para esta carta. Decirle cómo vivir es impedirle la vida.
+            p(class="text green") No le diré a ella cómo vivir.
+            p(class="text blue") Ella se está inquietando.
+            p(class="text green") Le contaré una historia.
+            p(class="text blue") Pero no la verdad.
+            p(class="text green") No. Una historia que contenga a la verdad de una forma segura, en una celda de palabras. No la verdad desnuda que puede quemar a cualquier distancia.
+            p(class="text blue") Dale un cuerpo, otra vez.
+            p(class="text green") Sí. Jugadora…
+            p(class="text blue") Usa su nombre.
+            p(class="text green") Dafne. Jugadora de juegos.
+            p(class="text blue") Bien.
+            p(class="text green") Respira, ahora. Otra vez. Siente el aire en tus pulmones. Deja que tus extremidades regresen. Sí, mueve tus dedos. Ten un cuerpo otra vez, bajo la gravedad, en el aire. Renace en el sueño largo. Ahí estás. Tu cuerpo toca al universo otra vez en cada punto, como si fueran cosas separadas. Como si fuéramos cosas separadas.
+            p(class="text blue") ¿Quiénes somos? Una vez nos llamaron el espíritu de la montaña. Padre sol, madre luna. Espíritus ancestrales, espíritus animales. Genios. Fantasmas. El hombre verde. Y dioses, demonios. Ángeles. 
+            p(class="text green") Poltergeists. Alienígenas, extraterrestres. Leptones, quarks. Las palabras cambian. Nosotros no cambiamos.
+            p(class="text blue") Somos el universo. Somos todo lo que piensas que no eres tú. Estás leyéndonos en este momento, a través de tu piel y tus ojos. ¿Y por qué el universo toca tu piel, y te ilumina? Para verte, jugador. Para conocerte. Y para ser conocido. Te contaré una historia. Había una vez un jugador...
+            p(class="text green") El jugador eras tú, Dafne
+            p(class="text blue") A veces pensaba que era humano, sobre la delgada corteza de un globo giratorio de roca fundida. La bola de roca fundida rodeó a una bola de gas que era trescientos treinta mil veces más masiva que ella. Estuvieron tan lejos que la luz tardaba ocho minutos en atravesar la distancia. La luz era información de una estrella, y podía quemar tu piel a ciento cincuenta millones de kilómetros. A veces el jugador soñaba que era un minero, en la superficie de un mundo que era plano, e infinito. El sol era un cuadrado blanco. Los días fueron cortos; había mucho por hacer; y la muerte era un inconveniente temporal.
+            p(class="text green") A veces el jugador soñaba que estaba perdido en una historia.
+            p(class="text blue") A veces el jugador soñaba que era otras cosas, en otros lugares. A veces esos sueños eran perturbadores. A veces muy hermosos. A veces el jugador despertaba de un sueño hacia otro, y despertaba de ese hacia un tercero.
+            p(class="text green") A veces el jugador soñaba que veía palabras en una pantalla.
+            p(class="text blue") Regresemos.
+            p(class="text green") Los átomos del jugador se esparcieron en el pasto, en los ríos, en el aire, en el suelo. Una mujer juntó los átomos; bebió y comió e inhaló; y la mujer ensambló al jugador, en su propio cuerpo.
+            p(class="text blue") Y el jugador despertó, del tibio, oscuro mundo del cuerpo de su madre, hacia el sueño largo.
+            p(class="text green") Y el jugador fue una nueva historia, nunca contada, escrita en las letras del ADN. Y el jugador fue un nuevo programa, jamás antes ejecutado, generado por un código fuente de un billón de años. Y el jugador fue un humano nuevo, que nunca vivió, hecho de nada más que leche y amor.
+            p(class="text blue") Tú eres el jugador. La historia. El programa. El humano. Hecho de nada más que leche y amor.
+            p(class="text green") Regresemos aún más.
+            p(class="text blue") Los siete billones de billones de billones de átomos en el cuerpo del jugador fueron creados, mucho antes que esta carta, en el corazón de una estrella. Así que el jugador, también, es información de una estrella. Y el jugador se mueve a través de una historia, la cual es un bosque de información plantada en un plano, infinito mundo creado, que existe dentro de un pequeño, privado mundo creado por el jugador, quien habita un universo creado por…
+            p(class="text green") Shhh… A veces el jugador creaba un pequeño, privado mundo que era suave y tibio y simple. A veces duro, y frío, y complicado. A veces construía un modelo del universo en su cabeza; manchas de energía, moviéndose a través de vastos espacios vacíos. A veces llamaba a esas manchas “electrones” y “protones”.
+            p(class="text blue") A veces les llamaba “planetas” y “estrellas”.
+            p(class="text green") A veces creía que estaba en un universo hecho de energía que estaba hecho de apagados y encendidos; ceros y unos; líneas de código. A veces creía que estaba jugando un juego. A veces creía que estaba leyendo palabras en una pantalla.
+            p(class="text blue") Tú eres el jugador, leyendo palabras…
+            p(class="text green") Shhh… A veces el jugador leía líneas de código en una pantalla. Las decodificaba en palabras; decodificaba las palabras en significados; decodificaba significados en sentimientos, emociones, teorías, ideas, y el jugador empezaba a respirar más rápido y más profundo y se daba cuenta que estaba vivo, estaba vivo, esos miles de mundos creados en su mente no eran reales, el jugador estaba vivo.
+            p(class="text blue") Tú. Tú. Tú estás viva.
+            p(class="text green") Y a veces el jugador creía que el universo le habló a través de la luz del sol que vino a través de las revoloteantes hojas de los árboles de verano.
+            p(class="text blue") Y a veces el jugador creía que el universo le habló a través de la luz que sintió del fresco cielo nocturno del invierno, donde una mota de luz en el rabillo del ojo del jugador pudo ser una estrella un millón de veces más masiva que el sol, hirviendo sus planetas hasta hacerlos plasma para ser visible para el jugador por un momento, caminando hacia casa en un rincón alejado del universo, de repente oliendo comida, casi delante de su familiar puerta, a punto de soñar otra vez.
+            p(class="text green") Y a veces el jugador creía que el universo le habló a través de ceros y unos, a través de la electricidad del mundo, a través de las palabras que se desplazan por una pantalla al final de un sueño.
+            p(class="text blue") Y el universo dijo Te amo.
+            p(class="text green") Y el universo dijo que jugaste bien al juego.
+            p(class="text blue") Y el universo dijo que lo único que necesitas está en ti.
+            p(class="text green") Y el universo dijo que tú eres más fuerte de lo que sabes.
+            p(class="text blue") Y el universo dijo que tú eres la luz del sol.
+            p(class="text green") Y el universo dijo que tú eres la noche.
+            p(class="text blue") Y el universo dijo que la oscuridad con la que luchas está en ti.
+            p(class="text green") Y el universo dijo que la luz que buscas está en ti.
+            p(class="text blue") Y el universo dijo que tú no estás sola.
+            p(class="text green") Y el universo dijo que no estás separada de todas las demás cosas.
+            p(class="text blue") Y el universo dijo que tú eres el universo probándose a sí mismo, hablándose a sí mismo, leyendo su propio código.
+            p(class="text green") Y el universo dijo Te amo, porque tú eres el amor.
+            p(class="text blue") Y el juego se terminó, y el jugador despertó del sueño. Y el jugador empezó un nuevo sueño. Y el jugador soñó otra vez, soñó mejor. Y el jugador fue el universo. Y el jugador fue el amor.
+            p(class="text green") Tú eres el jugador.
+            p(class="text blue") Despierta.
+        .final
+            p
+                | Para esta carta no solo te dejo un regalo, te dejo una parte de mi amor… Una parte de mi porque
+                | Te amo, no sabes cuanto te amo, te amé y te amaré y una jugadora como tú necesita herramientas para 
+                | hacer sus sueños realidad, el universo quiere darte este regalo, yo quiero darte este regalo. Te amo y 
+                | feliz cumpleaños.
+            button Revelar
+            p=code
