--- a/src/views/gift.pug
+++ b/src/views/gift.pug
@@ -45,14 +45,14 @@ html(lang="en")
             p(class="text blue") Ella soñó con la luz del sol y con los árboles. Con fuego y agua. Soñó que creó. Y soñó que destruyó. Soñó que cazó, y que fue cazado. Soñó con un refugio.
             p(class="text green") Ah, el sueño original. Tiene millones de años, y todavía funciona. ¿Pero qué cosa real creó ella, detrás de la pantalla?
             p(class="text blue")
-                | Trabajó. Junto a nosotros, para esculpir un mundo real dentro del pliegue de
-                img(src="", alt="")
-                |, y creó un
-                img(src="", alt="")
-                | para
-                img(src="", alt="")
-                | , en
-                img(src="", alt="")
+                | Trabajó. Junto a nosotros, para esculpir un mundo real dentro del pliegue de 
+                img(src="/images/0.webp", alt="")
+                | , y creó un 
+                img(src="/images/1.webp" class="censored second", alt="") 
+                | para 
+                img(src="/images/2.webp", alt="")
+                | , en 
+                img(src="/images/3.webp", alt="")
             p(class="text green") No puede leer ese pensamiento.
             p(class="text blue") No, aún no alcanzó el nivel más alto. Aquel, que debe alcanzar en el largo sueño de la vida, no en el corto sueño de una carta.
             p(class="text green") ¿Sabe que la amamos? ¿Que el universo es bueno?
@@ -61,14 +61,14 @@ html(lang="en")
             p(class="text blue") Curarle de la pena nos destruirá. La pena es parte de su propia tarea privada. No podemos interferir.
             p(class="text green") A veces cuando está sumergida en sus sueños, quisiera decirle, ella construye mundos tangibles en la realidad. A veces quiero contarle sobre su importancia en el universo. A veces, cuando no tienen una conexión real por un tiempo, quiero ayudarle a decir la palabra a la que teme.
             p(class="text blue") Está leyendo nuestros pensamientos.
-            p(class="text green") A veces no me importa. A veces desearía decirle, que este mundo que toma por real es solamente
-                img(src="", alt="")
-                |y
-                img(src="", alt="")
-                |, me gustaría decirle que es
-                img(src="", alt="")
-                | en
-                img(src="", alt="")
+            p(class="text green") A veces no me importa. A veces desearía decirle, que este mundo que toma por real es solamente 
+                img(src="/images/0.webp", alt="")
+                | y
+                img(src="/images/1.webp" class="censored second", alt="")
+                |, me gustaría decirle que es 
+                img(src="/images/2.webp", alt="")
+                | en 
+                img(src="/images/3.webp", alt="")
                 | . Ve tan poco de lo real en su largo sueño.
             p(class="text blue") Y todavía juega.
             p(class="text green") Pero sería tan fácil decirles…
@@ -128,7 +128,7 @@ html(lang="en")
                 | Para esta carta no solo te dejo un regalo, te dejo una parte de mi amor… Una parte de mi porque
                 | Te amo, no sabes cuanto te amo, te amé y te amaré y una jugadora como tú necesita herramientas para 
                 | hacer sus sueños realidad, el universo quiere darte este regalo, yo quiero darte este regalo. Te amo y 
-                | feliz cumpleaños.
+                | feliz cumpleaños...
             button(class="btn", id="btn") Revelar
             p(class="text hide", id="code")=code
-            a(class="text", href="https://www.minecraft.net/en-us/redeem") Dame click!!!
+            a(class="text hide", href="https://www.minecraft.net/en-us/redeem") Dame click!!!
