--- a/src/static/styles/gift.css
+++ b/src/static/styles/gift.css
@@ -35,6 +35,14 @@ body {
     display: none;
 }
 
+img {
+    width: 100px;
+}
+
+.second {
+    width: 60px;
+}
+
 a {
     margin-top: 35px;
     display: block;
