--- a/src/views/gift.pug
+++ b/src/views/gift.pug
@@ -42,7 +42,7 @@ html(lang="en")
             p(class="text green") Las palabras son una hermosa herramienta. Muy flexible.
             p(class="text blue") Ella solía escuchar voces. Antes de pudiese leer. En aquellos días cuando los que no podían soñar llamaban brujos a los soñadores.
             p(class="text green") ¿Con qué soñó ella?
-            p(class="text blue") Ella soñó con la luz del sol y con los árboles. Con fuego y agua. Soñó que creó. Y soñó que destruyó. Soñó que cazó, y que fue cazado. Soñó con un refugio.
+            p(class="text blue") Ella soñó con la luz del sol y con los árboles. Con fuego y agua. Soñó que creó. Y soñó que destruyó. Soñó que cazó, y que fue cazada. Soñó con un refugio.
             p(class="text green") Ah, el sueño original. Tiene millones de años, y todavía funciona. ¿Pero qué cosa real creó ella, detrás de la pantalla?
             p(class="text blue")
                 | Trabajó. Junto a nosotros, para esculpir un mundo real dentro del pliegue de 
@@ -71,7 +71,7 @@ html(lang="en")
                 img(src="/images/3.webp", alt="")
                 | . Ve tan poco de lo real en su largo sueño.
             p(class="text blue") Y todavía juega.
-            p(class="text green") Pero sería tan fácil decirles…
+            p(class="text green") Pero sería tan fácil decirle…
             p(class="text blue") Demasiado fuerte para esta carta. Decirle cómo vivir es impedirle la vida.
             p(class="text green") No le diré a ella cómo vivir.
             p(class="text blue") Ella se está inquietando.
