--- a/src/views/puzzle/third.pug
+++ b/src/views/puzzle/third.pug
@@ -7,12 +7,19 @@ html(lang="en")
         link(rel="shortcut icon", href="/images/icon.png", type="image/x-icon")
         link(rel="stylesheet", href="/styles/global.css")
         link(rel="stylesheet", href="/styles/puzzle/third.css")
+        script(src="/scripts/puzzle/third.js" defer) 
         title third-puzzle
     body
-        h2(class="title")
-            | Para este reto quiero que escribas 2 cartas, la primera para la tu de 1 año
-            | en un año te la daré, pero quiero que escribas tus pensamientos, tus miedos, inseguridades, tus metas
-            | expresa todo lo que no le puedes decir a nadie, las cosas que quieres hacer, tus expectativas conmigo, con tus seres queridos
-            | este es un espacio para desahogarte de todas las personas a tu al rededor, saca tu artista interno y escribe... ❤️
-        input(type="text", name="")
-        button(class="btn") Enviar
+        .app
+            h2(class="title") Espero y seas buena memorizando 😈😈
+            button(class="btn" id="start") Empezar
+            h3(class="title", id="message")
+            h3(id="counter")
+        .puzzle
+            .machine
+                div(id="blue" class="part")
+                div(id="red" class="part")
+                div(id="green" class="part")
+                div(id="yellow" class="part")
+            .repeat
+                button(class="btn hide", id="repeat") Repeat
