--- a/src/views/puzzle/fifth.pug
+++ b/src/views/puzzle/fifth.pug
@@ -63,7 +63,4 @@ html(lang="en")
         .clear
             button(class="btn", id="reset") Reset
         .error-label(id="error")
-            .bars(id="bars")
-                .bar1
-                .bar2
-            p(class="text") código incorrecto
+            p(class="text") Secuencia incorrecta
