--- a/src/views/puzzle/fourth.pug
+++ b/src/views/puzzle/fourth.pug
@@ -6,7 +6,13 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="shortcut icon", href="/images/icon.png", type="image/x-icon")
         link(rel="stylesheet", href="/styles/global.css")
-        script(src="/scripts/puzzle/fourth.js" defer) 
+        link(rel="stylesheet", href="/styles/puzzle/fourth.css")
         title fourth-puzzle
     body
-        
+        .instructions
+            h3(class="title") Este reto es diferente, quiero que hagas la casa de tus sueños
+            h3(class="title") Puedes usar lo que quieras. Cualquier juego, dibujo, pero quiero que lo hagas tu
+                | No uses videos 
+                | puedes usar programas de diseño o juegos
+            h3(class="title") Cuando acabes, muéstrame tu casa, con decoraciones, CADA DETALLE
+            h3(class="title") Esfuérzate, porque me pondré muy exigente con los detalles 😈❤️
